--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,14 @@
         <maven.compiler.target>1.11</maven.compiler.target>
     </properties>
 
+
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.12</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.codepoetics</groupId>
